# HiveEngine

./: .gitignore  CMakeLists.txt  HiveFeatures.json  NOTICE
Propolis/: CMakeLists.txt
Propolis/include/propolis/compiler/: codegen.h  codegen_data_flow.h  codegen_exec_flow.h  cpp_type_mapper.h  graph_validator.h
Propolis/include/propolis/core/: log.h
Propolis/include/propolis/graph/: graph.h  graph_types.h
Propolis/include/propolis/macros/: blueprint_function.h
Propolis/include/propolis/nodes/: node_descriptor.h
Propolis/include/propolis/runtime/: function_registry.h  propolis_executor.h  propolis_script.h  script_instance.h  script_log.h  script_registry.h
Propolis/include/propolis/types/: ptype.h  type_solver.h
Propolis/src/propolis/compiler/: codegen.cpp  codegen_data_flow.cpp  codegen_exec_flow.cpp  cpp_type_mapper.cpp  graph_validator.cpp
Propolis/src/propolis/graph/: graph.cpp  graph_json.cpp
Propolis/src/propolis/nodes/: node_descriptor.cpp
Propolis/src/propolis/runtime/: function_registry.cpp  propolis_executor.cpp
Propolis/src/propolis/types/: ptype.cpp  type_solver.cpp
Propolis/tests/: test_codegen.cpp  test_entity_script.cpp  test_function_codegen.cpp  test_function_macro_arities.cpp  test_function_registry.cpp  test_graph.cpp  test_graph_validator.cpp  test_node_descriptor.cpp  test_propolis_executor.cpp  test_ptype.cpp  test_script_runtime.cpp  test_type_solver.cpp
Waggle/: CMakeLists.txt
Waggle/include/waggle/: engine_runner.h  gizmo_state.h  play_state.h
Waggle/include/waggle/components/: editor_camera.h  editor_grid.h  editor_only.h  gizmo.h  mesh_reference.h
Waggle/include/waggle/math/: ray_intersect.h
Waggle/include/waggle/profiling/: frame_bench.h
Waggle/include/waggle/project/: cmake_build.h  project_manager.h  ship_pak_writer.h  ship_pipeline.h
Waggle/include/waggle/render/: render_frame.h  render_module.h  render_resource.h
Waggle/include/waggle/scene/: asset_reachability.h  scene_io.h
Waggle/include/waggle/systems/: debug_freecam_system.h  editor_camera_system.h  gizmo_render_system.h  mesh_render_system.h  propolis_system.h
Waggle/src/waggle/: app.cpp  engine_runner.cpp  gizmo_state.cpp  play_state.cpp
Waggle/src/waggle/math/: ray_intersect.cpp
Waggle/src/waggle/profiling/: frame_bench.cpp
Waggle/src/waggle/project/: cmake_build.cpp  cmake_generator.cpp  gameplay_module.cpp  project_manager.cpp  ship_pak_writer.cpp  ship_pipeline.cpp
Waggle/src/waggle/render/: render_module.cpp
Waggle/src/waggle/scene/: asset_reachability.cpp  gltf_scene_loader.cpp  scene_io.cpp
Waggle/src/waggle/systems/: debug_freecam_system.cpp  editor_camera_system.cpp  (+4 more)
(+294 files in other folders)
